--- a/index.html
+++ b/index.html
@@ -110,8 +110,16 @@
       transform: translateY(-2px);
       box-shadow: 0 16px 32px rgba(255, 61, 117, 0.35);
     }
-
     #noBtn {
+      background: #111;
+      color: white;
+      opacity: 0.95;
+      position: fixed;
+      left: 56%;
+      top: 70%;
+      z-index: 9999;   /* ✅ brings NO button to front */
+      box-shadow: 0 12px 26px rgba(0,0,0,0.25);
+    }
       background: #111;
       color: white;
       opacity: 0.92;
@@ -259,6 +267,7 @@
 
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
+      noBtn.style.position = "fixed";
 
       // make YES button bigger slowly 😈
       const scale = 1 + (noCount * 0.05);
