--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
 
     <button class="miniBtn" id="copyBtn">Copy message 📋</button>
-    <button class="miniBtn" id="againBtn">Replay 😈💘</button>
+    <button class="miniBtn" id="againBtn">Replay 💘</button>
   </div>
 
   <script>
