--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@
     </div>
 
     <button class="miniBtn" id="copyBtn">Copy message 📋</button>
-    <button class="miniBtn" id="againBtn">Replay 💘</button>
   </div>
 
   <script>
@@ -269,7 +268,7 @@
       noBtn.style.top = y + "px";
       noBtn.style.position = "fixed";
 
-      // make YES button bigger slowly 😈
+      // make YES button bigger slowly 
       const scale = 1 + (noCount * 0.05);
       yesBtn.style.transform = `scale(${Math.min(scale, 1.5)})`;
     }
